--- a/equipe.html
+++ b/equipe.html
@@ -18,22 +18,50 @@
     </nav>
     <!-- Contenu de la page de présentation du personnel -->
     <section>
-        <h1>Notre Équipe</h1>
-        <article role="listitem">
-            <img src="employe1.jpg" alt="Nom de l'employé 1">
-            <h2>Nom de l'employé 1</h2>
-            <p>Poste: Titre du poste</p>
-            <!-- Ajoutez plus d'informations sur l'employé ici -->
-        </article>
-
-        <article role="listitem">
-            <img src="employe2.jpg" alt="Nom de l'employé 2">
-            <h2>Nom de l'employé 2</h2>
-            <p>Poste: Titre du poste</p>
-            <!-- Ajoutez plus d'informations sur l'employé ici -->
-        </article>
-
-        <!-- Ajoutez plus d'articles pour chaque membre de l'équipe -->
+        <h1 tabindex="1" class="contact-title">Voici notre équipe</h1>
+        <p class="equipe-p">Laissez nous vous présenter l'équipe High Three ! </p>
+        
+        <div class="list-dev"> 
+            <div class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="3" href="https://fr.linkedin.com/in/lou-le-gall-9017551a3">
+                            <img src="Data/Lou.jpg" alt="Photo devellopeur 1">
+                        </a>
+                    </div>
+                </div>
+                <div class="equipe-info">
+                    <h2><span tabindex="2" class="title">Lou Le Gall</span></h2>
+                    <p>Poste : Developpeuse web</p>
+                </div>
+            </div>
+            <div class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="5" href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b">
+                            <img src="Data/Maxime.jpg" alt="Photo devellopeur 2">
+                        </a>
+                    </div>
+                </div>
+                <div class="equipe-info">
+                    <h2><span tabindex="4" class="title">Maxime Cordier</span></h2>
+                    <p>Poste : Developpeur web</p>
+                </div>
+            </div>
+            <div class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="7" href="https://fr.linkedin.com/in/remiuhartegaray">
+                            <img src="Data/Remi.jpg" alt="Photo devellopeur 3">
+                        </a>
+                    </div>
+                </div>
+                <div class="equipe-info">
+                    <h2><span tabindex="6" class="title">Rémi Uhartegaray</span></h2>
+                    <p>Poste : Developpeur web</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
