--- a/equipe.html
+++ b/equipe.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Notre équipe</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Notre équipe</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <body>
-        <nav role="navigation" aria-label="Navigation principale">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="equipe.html" aria-current="page">Équipe</a></li>
-            </ul>
-        </nav>
+<body>
+    <nav role="navigation" aria-label="Navigation principale">
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="equipe.html" aria-current="page">Équipe</a></li>
+        </ul>
+    </nav>
 
-        <section>
-            <h1 tabindex="1" class="contact-title">Voici notre équipe</h1>
-            
-            <p class="equipe-p">Laissez nous vous présenter l'équipe High Three ! </p>
-            
-            <div class="list-dev"> 
-                <div class="equipe-article">
-                    <div class="equipe-image">
-                        <div class="equipe-images">
-                            <a tabindex="3" href="https://fr.linkedin.com/in/lou-le-gall-9017551a3">
-                                <img src="Data/Lou.jpg" alt="Photo devellopeur 1">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="equipe-info">
-                        <h2><span tabindex="2" class="title">Lou Le Gall</span></h2>
-                        <p>Poste : Developpeuse web</p>
+    <section>
+        <h1 tabindex="1" class="contact-title">Voici notre équipe</h1>
+
+        <p class="equipe-p">Laissez-nous vous présenter l'équipe High Three ! </p>
+
+        <div class="list-dev">
+            <article class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="3" href="https://fr.linkedin.com/in/lou-le-gall-9017551a3" aria-label="Profil LinkedIn de Lou Le Gall">
+                            <img src="Data/Lou.jpg" alt="Photo Lou Le Gall" aria-describedby="lou-description">
+                        </a>
                     </div>
                 </div>
-                <div class="equipe-article">
-                    <div class="equipe-image">
-                        <div class="equipe-images">
-                            <a tabindex="5" href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b">
-                                <img src="Data/Maxime.jpg" alt="Photo devellopeur 2">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="equipe-info">
-                        <h2><span tabindex="4" class="title">Maxime Cordier</span></h2>
-                        <p>Poste : Developpeur web</p>
+                <div class="equipe-info">
+                    <h2><span tabindex="2" class="title">Lou Le Gall</span></h2>
+                    <p>Poste : Développeuse web</p>
+                </div>
+            </article>
+            <article class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="5" href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b" aria-label="Profil LinkedIn de Maxime Cordier">
+                            <img src="Data/Maxime.jpg" alt="Photo Maxime Cordier" aria-describedby="maxime-description">
+                        </a>
                     </div>
                 </div>
-                <div class="equipe-article">
-                    <div class="equipe-image">
-                        <div class="equipe-images">
-                            <a tabindex="7" href="https://fr.linkedin.com/in/remiuhartegaray">
-                                <img src="Data/Remi.jpg" alt="Photo devellopeur 3">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="equipe-info">
-                        <h2><span tabindex="6" class="title">Rémi Uhartegaray</span></h2>
-                        <p>Poste : Developpeur web</p>
+                <div class="equipe-info">
+                    <h2><span tabindex="4" class="title">Maxime Cordier</span></h2>
+                    <p>Poste : Développeur web</p>
+                </div>
+            </article>
+            <article class="equipe-article">
+                <div class="equipe-image">
+                    <div class="equipe-images">
+                        <a tabindex="7" href="https://fr.linkedin.com/in/remiuhartegaray" aria-label="Profil LinkedIn de Rémi Uhartegaray">
+                            <img src="Data/Remi.jpg" alt="Photo Rémi Uhartegaray" aria-describedby="remi-description">
+                        </a>
                     </div>
                 </div>
-            </div>
-        </section>
-    </body>
+                <div class="equipe-info">
+                    <h2><span tabindex="6" class="title">Rémi Uhartegaray</span></h2>
+                    <p>Poste : Développeur web</p>
+                </div>
+            </article>
+        </div>
+    </section>
+</body>
 
 </html>
