--- a/equipe.html
+++ b/equipe.html
@@ -23,6 +23,7 @@
 
         <div class="list-dev">
             <article class="equipe-article">
+                <p id="lou-description">Description de Lou Le Gall</p>
                 <div class="equipe-image">
                     <div class="equipe-images">
                         <a tabindex="3" href="https://fr.linkedin.com/in/lou-le-gall-9017551a3" aria-label="Profil LinkedIn de Lou Le Gall">
@@ -35,7 +36,9 @@
                     <p>Poste : Développeuse web</p>
                 </div>
             </article>
+
             <article class="equipe-article">
+                <p id="maxime-description">Description de Maxime Cordier</p>
                 <div class="equipe-image">
                     <div class="equipe-images">
                         <a tabindex="5" href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b" aria-label="Profil LinkedIn de Maxime Cordier">
@@ -48,7 +51,9 @@
                     <p>Poste : Développeur web</p>
                 </div>
             </article>
+
             <article class="equipe-article">
+                <p id="remi-description">Description de Rémi Uhartegaray</p>
                 <div class="equipe-image">
                     <div class="equipe-images">
                         <a tabindex="7" href="https://fr.linkedin.com/in/remiuhartegaray" aria-label="Profil LinkedIn de Rémi Uhartegaray">
