--- a/equipe.html
+++ b/equipe.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav role="navigation" aria-label="Navigation principale">
+    <nav>
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="contact.html">Contact</a></li>
