--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
         <section>
             <h1 tabindex="0" class="contact-title">Contactez-nous</h1>
-            <form action="process_contact.php" method="post" role="form">
+            <form action="process_contact.php" method="post">
                 <!-- Prénom -->
                 <div class="form-group">
                     <label for="firstname">Prénom :</label>
