--- a/equipe.html
+++ b/equipe.html
@@ -8,66 +8,64 @@
 </head>
 
 <body>
+    <!-- Barre de navigation -->
     <nav>
         <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="equipe.html" aria-current="page">Équipe</a></li>
+            <li><a href="index.html" tabindex="1">Accueil</a></li>
+            <li><a href="contact.html" tabindex="2">Contact</a></li>
+            <li><a href="equipe.html" tabindex="3">Équipe</a></li>
         </ul>
     </nav>
 
-    <section>
-        <h1 tabindex="1" class="contact-title">Voici notre équipe</h1>
+    <main>
+        <h1 class="contact-title" tabindex="4">Voici notre équipe</h1>
 
-        <p class="equipe-p">Laissez-nous vous présenter l'équipe High Three ! </p>
+        <p class="equipe-p" tabindex="5">Laissez-nous vous présenter l'équipe High Three ! </p>
 
         <div class="list-dev">
-            <article class="equipe-article">
-                <p id="lou-description">Description de Lou Le Gall</p>
+            <article class="equipe-article" tabindex="6">
                 <div class="equipe-image">
                     <div class="equipe-images">
-                        <a tabindex="3" href="https://fr.linkedin.com/in/lou-le-gall-9017551a3" aria-label="Profil LinkedIn de Lou Le Gall">
-                            <img src="Data/Lou.jpg" alt="Photo Lou Le Gall" aria-describedby="lou-description">
+                        <a href="https://fr.linkedin.com/in/lou-le-gall-9017551a3" aria-label="Profil LinkedIn de Lou Le Gall" tabindex="7">
+                            <img src="Data/Lou.jpg" alt="Photo Lou Le Gall" >
                         </a>
                     </div>
                 </div>
-                <div class="equipe-info">
-                    <h2><span tabindex="2" class="title">Lou Le Gall</span></h2>
+                <div class="equipe-info" tabindex="8">
+                    <h2><span class="title">Lou Le Gall</span></h2>
                     <p>Poste : Développeuse web</p>
                 </div>
             </article>
 
-            <article class="equipe-article">
-                <p id="maxime-description">Description de Maxime Cordier</p>
+            <article class="equipe-article" tabindex="9">
                 <div class="equipe-image">
                     <div class="equipe-images">
-                        <a tabindex="5" href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b" aria-label="Profil LinkedIn de Maxime Cordier">
-                            <img src="Data/Maxime.jpg" alt="Photo Maxime Cordier" aria-describedby="maxime-description">
+                        <a href="https://fr.linkedin.com/in/maxime-cordier-1a2ba419b" aria-label="Profil LinkedIn de Maxime Cordier" tabindex="10">
+                            <img src="Data/Maxime.jpg" alt="Photo Maxime Cordier" >
                         </a>
                     </div>
                 </div>
-                <div class="equipe-info">
-                    <h2><span tabindex="4" class="title">Maxime Cordier</span></h2>
+                <div class="equipe-info" tabindex="11">
+                    <h2><span class="title">Maxime Cordier</span></h2>
                     <p>Poste : Développeur web</p>
                 </div>
             </article>
 
-            <article class="equipe-article">
-                <p id="remi-description">Description de Rémi Uhartegaray</p>
+            <article class="equipe-article" tabindex="12">
                 <div class="equipe-image">
                     <div class="equipe-images">
-                        <a tabindex="7" href="https://fr.linkedin.com/in/remiuhartegaray" aria-label="Profil LinkedIn de Rémi Uhartegaray">
-                            <img src="Data/Remi.jpg" alt="Photo Rémi Uhartegaray" aria-describedby="remi-description">
+                        <a href="https://fr.linkedin.com/in/remiuhartegaray" aria-label="Profil LinkedIn de Rémi Uhartegaray" tabindex="13">
+                            <img src="Data/Remi.jpg" alt="Photo Rémi Uhartegaray" >
                         </a>
                     </div>
                 </div>
-                <div class="equipe-info">
-                    <h2><span tabindex="6" class="title">Rémi Uhartegaray</span></h2>
+                <div class="equipe-info" tabindex="14">
+                    <h2><span class="title">Rémi Uhartegaray</span></h2>
                     <p>Poste : Développeur web</p>
                 </div>
             </article>
         </div>
-    </section>
+    </main>
 </body>
 
 </html>
