--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <section class="home-section">
         <div class="article" tabindex="4">
             <div class="nos-images">
-                <img src="Data/Book_Lou.png" alt="Image Livre 1">
+                <img src="Data/Book_Lou.png" aria-label="Première de couverture du livre de Mme. Le Gall Lou">
             </div>
             <div>
-                <h2><span class="title">Essai de M. Le Gall Lou</span></h2>
+                <h2><span class="title">Essai de Mme. Le Gall Lou</span></h2>
                 <dl>
                     <div class="information">
                         <dt><span class="label">Titre:</span></dt>
-                        <dd>Psycho-social par M.Le Gall</dd>
+                        <dd>Psycho-social par Mme.Le Gall</dd>
 
                         <dt><span class="label">Auteur:</span></dt>
                         <dd>Mme. Le Gall Lou</dd>
@@ -47,7 +47,7 @@
 
         <div class="article" tabindex="6">
             <div class="nos-images">
-                <img src="Data/Book_Maxime.png" alt="Image Livre 1">
+                <img src="Data/Book_Maxime.png" aria-label="Première de couverture du livre de M. Cordier Maxime">
             </div>
             <div>
                 <h2><span class="title">Essai de M. Cordier Maxime</span></h2>
@@ -72,7 +72,7 @@
 
         <div class="article" tabindex="8">
             <div class="nos-images">
-                <img src="Data/Book_Rémi.png" alt="Essai de M. Uhartegaray Rémi">
+                <img src="Data/Book_Rémi.png" aria-label="Première de couverture du livre de M. Uhartegaray Rémi">
             </div>
             <div>
                 <h2><span class="title">Essai de M. Uhartegaray Rémi</span></h2>
