--- a/Book/bookMaxime.html
+++ b/Book/bookMaxime.html
@@ -22,7 +22,7 @@
     <section class="book-page">
         <div class="book-details">
             <h1>Essai de M. Cordier Maxime</h1>
-            <img src="../Data/Book_Maxime.png" alt="Image Livre 1">
+            <img src="../Data/Book_Maxime.png" aria-label="Vous allez pouvoir vous plonger dans un essaie surprenant">
             <p class="author">Auteur: M. Cordier Maxime</p>
         </div>
     </section>
